--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -9,9 +9,7 @@ jobs:
       - uses: iterative/setup-cml@v1
       - name: Train model
         run: |
-          # Your ML workflow goes here
-          pip install -r requirements.txt
-          # python train.py
+          pip3 install -r requirements.txt
       - name: Write CML report
         env:
           GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
